# fp-tools

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  acknowledge_fptools.html  contact.html  contributing.html  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
.doctrees/: acknowledge_fptools.doctree  contact.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/community/: acknowledge.doctree  contact.doctree  issues.doctree
.doctrees/installation/: build.doctree  building.doctree  examples.doctree  quick-start.doctree  release.doctree  troubleshooting.doctree
.doctrees/theory/: corr.doctree  fpt.doctree  msd.doctree  rdf.doctree
.doctrees/usage/: get_started.doctree  parameters.doctree
.github/workflows/: deploy-docs.yaml
_sources/: index.rst.txt
_sources/community/: issues.rst.txt
_sources/installation/: examples.rst.txt
_sources/theory/: corr.rst.txt
_sources/usage/: get_started.rst.txt
cmake/: FPToolsFunctions.cmake
cmake/dependencies/: FFTW.cmake  MPI.cmake  OpenMP.cmake
community/: acknowledge.html  contact.html  issues.html
docs/source/: acknowledge_fptools.rst  conf.py  contact.rst  contributing.rst  index.rst
docs/source/community/: acknowledge.rst  contact.rst
docs/source/installation/: building.rst  quick-start.rst  release.rst  troubleshooting.rst
docs/source/theory/: fpt.rst  msd.rst  rdf.rst
docs/source/usage/: parameters.rst
examples/: basic-template.toml  input-template.toml
examples/single-component/: single-component-test.toml
include/analysis/: corr.h  mfpt.h  msd.h  rdf.h
include/core/: base.h  basic_math.h  traj_prov.h
include/io/: config.h  config_utils.h  logger.h
include/io/formats/: binary.h  lammps.h  vasp.h  xyz.h
installation/: build.html  building.html  examples.html  quick-start.html  release.html  troubleshooting.html
scripts/: fp_plot.py
src/: fp_tools.cpp
src/analysis/: corr.cpp  mfpt.cpp  msd.cpp  rdf.cpp
src/io/: config.cpp  logger.cpp
src/io/formats/: binary.cpp  lammps.cpp  vasp.cpp  xyz.cpp
theory/: corr.html  fpt.html  msd.html  rdf.html
usage/: get_started.html  parameters.html
